--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ license = "MIT License"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+PyYAML = "^6.0"
+Jinja2 = "^3.0.2"
 
 [tool.poetry.dev-dependencies]
 
