compatible with Mac OSX

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 ## Global Options
-set-option -g default-shell "/usr/bin/zsh"
+set-option -g default-shell ${SHELL}
 set-option -g default-terminal "tmux-256color"
 set-option -g escape-time 0
 set-option -g display-panes-active-colour red
