--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,7 +8,6 @@ set-option -g mouse on
 set-option -g remain-on-exit off
 set-option -g set-titles off
 set-option -g status on
-set-option -g status-interval 15
 set-option -g status-position bottom
 set-option -g status-left-length 20
 set-option -g visual-activity off
@@ -26,7 +25,7 @@ set-option -g mode-keys vi
 # prefix keytable
 bind-key -T prefix C-Space copy-mode
 bind-key -T prefix q kill-pane
-bind-key -T prefix r source-file ~/.tmux.conf \; display-message 'Reload'
+bind-key -T prefix r source-file ~/.config/tmux/tmux.conf \; display-message 'Reload'
 bind-key -T prefix | split-window -h
 bind-key -T prefix \\ split-window -h
 bind-key -T prefix - split-window -v
@@ -34,15 +33,17 @@ bind-key -T prefix h select-pane -L
 bind-key -T prefix j select-pane -D
 bind-key -T prefix k select-pane -U
 bind-key -T prefix l select-pane -R
+bind-key -T prefix n new-window
+bind-key -T prefix f next-window
+bind-key -T prefix b previous-window
+bind-key -T prefix p select-pane
 bind-key -T prefix v paste-buffer
 # copy-mode keytable
 bind-key -T copy-mode-vi Escape send-keys -X cancel
 bind-key -T copy-mode-vi Space send-keys -X begin-selection
 bind-key -T copy-mode-vi q send-keys -X clear-selection
-bind-key -T copy-mode-vi c send-keys -X copy-pipe-and-cancel "xsel --input --clipboard"
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi V send-keys -X select-line
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --input --clipboard"
 bind-key -T copy-mode-vi i send-keys -X cancel
 bind-key -T copy-mode-vi C-e send-keys -X end-of-line
 bind-key -T copy-mode-vi C-a send-keys -X start-of-line
@@ -51,11 +52,25 @@ bind-key -T copy-mode-vi C-g send-keys -X clear-selection
 bind-key -T copy-mode-vi C-c send-keys -X cancel
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi C-b send-keys -X cursor-left
-bind-key -T copy-mode-vi C-y send-keys -X copy-pipe "xsel --input --clipboard"
 bind-key -T copy-mode-vi C-p send-keys -X cursor-up
 bind-key -T copy-mode-vi C-n send-keys -X cursor-down
 # mouse bindings
 bind-key -T root WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind-key -T root WheelDownPane select-pane -t= \; send-keys -M
-bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xsel --input --clipboard"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xsel --input --clipboard"
+# read config files
+source "~/.config/tmux/copy.conf"
+source "~/.config/tmux/style.conf"
+source "~/.config/tmux/status.conf"
+# override option which set at powerline
+set-option -g status-interval 15
+# plugins
+set-option -g @plugin 'tmux-plugins/tpm'
+set-option -g @plugin 'tmux-plugins/tmux-copycat'
+set-option -g @plugin 'tmux-plugins/tmux-sidebar'
+set-option -g @sidebar-tree-command 'tree -CFN -L 1 --noreport --dirsfirst'
+set-option -g @sidebar-tree-position 'left'
+set-option -g @sidebar-tree 'd'
+set-option -g @sidebar-tree-width '20'
+run-shell '~/.config/tmux/plugins/tmux-copycat/copycat.tmux'
+run-shell '~/.config/tmux/plugins/tmux-sidebar/sidebar.tmux'
+run-shell '~/.config/tmux/plugins/tpm/tpm'
