select pane by tree

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,7 +36,7 @@ bind-key -T prefix l select-pane -R
 bind-key -T prefix n new-window
 bind-key -T prefix f next-window
 bind-key -T prefix b previous-window
-bind-key -T prefix p select-pane
+bind-key -T prefix p choose-tree -Z
 bind-key -T prefix v paste-buffer
 # copy-mode keytable
 bind-key -T copy-mode-vi Escape send-keys -X cancel
