--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,9 +1,11 @@
 ## Global Options
 set-option -g default-shell ${SHELL}
 set-option -g default-terminal "tmux-256color"
+set-option -sa terminal-overrides ',tmux-256color:RGB'
 set-option -g escape-time 0
 set-option -g display-panes-active-colour red
 set-option -g display-panes-colour blue
+set-option -g focus-events on
 set-option -g mouse on
 set-option -g remain-on-exit off
 set-option -g set-titles off
