refine default status of tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,7 @@
 ## Global Options
 set-option -g default-shell ${SHELL}
-set-option -g default-terminal "tmux-256color"
-set-option -sa terminal-overrides ',tmux-256color:RGB'
+set-option -g default-terminal "${TERM}"
+set-option -sa terminal-overrides ",${TERM}:Tc"
 set-option -g escape-time 0
 set-option -g display-panes-active-colour red
 set-option -g display-panes-colour blue
