change color when client_prefix

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,6 +22,7 @@ set-option -g synchronize-panes off
 ## Key Bindings
 unbind-key -T prefix C-b
 set-option -g prefix C-Space
+#set-option -g prefix C-j
 set-option -g status-keys vi
 set-option -g mode-keys vi
 # prefix keytable
