--- a/tmux/status.conf
+++ b/tmux/status.conf
@@ -3,7 +3,7 @@ set-option -g status-justify "left"
 set-option -g status-fg "colour16"
 set-option -g status-bg "colour17"
 set-option -g status-left-length 30
-set-option -g status-left "#[fg=colour12,bg=colour17] #h  #S  #[default]"
+set-option -g status-left "#[fg=#{?client_prefix,colour0,colour12},bg=#{?client_prefix,color4,colour17}] #h  #S  #[default]"
 set-window-option -g window-status-format " #I  #W "
 set-window-option -g window-status-current-format "#[fg=colour10,bg=colour17] #I*  #W  #[default]"
 set-option -g status-right-length 50
