use tmux-powerline

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -63,13 +63,11 @@ bind-key -T root WheelDownPane select-pane -t= \; send-keys -M
 # read config files
 source "~/.config/tmux/copy.conf"
 source "~/.config/tmux/style.conf"
-source "~/.config/tmux/status.conf"
-# override option which set at powerline
-set-option -g status-interval 15
 # plugins
 set-option -g @plugin 'tmux-plugins/tpm'
 set-option -g @plugin 'tmux-plugins/tmux-copycat'
 set-option -g @plugin 'tmux-plugins/tmux-sidebar'
+set-option -g @plugin 'tmux-plugins/tmux-powerline'
 set-option -g @sidebar-tree-command 'tree -CFN -L 1 --noreport --dirsfirst'
 set-option -g @sidebar-tree-position 'left'
 set-option -g @sidebar-tree 'd'
