--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,12 @@ Jinja2 = "^3.0.2"
 
 [tool.poetry.dev-dependencies]
 
+[tool.poetry.group.dev.dependencies]
+black = "^24.3.0"
+ruff = "^0.3.5"
+python-lsp-server = "^1.11.0"
+python-lsp-ruff = "^2.2.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
