--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,6 +27,7 @@ set-option -g status-keys vi
 set-option -g mode-keys vi
 # prefix keytable
 bind-key -T prefix C-Space copy-mode
+#bind-key -T prefix C-j copy-mode
 bind-key -T prefix q kill-pane
 bind-key -T prefix r source-file ~/.config/tmux/tmux.conf \; display-message 'Reload'
 bind-key -T prefix | split-window -h
@@ -58,6 +59,7 @@ bind-key -T copy-mode-vi C-b send-keys -X cursor-left
 bind-key -T copy-mode-vi C-p send-keys -X cursor-up
 bind-key -T copy-mode-vi C-n send-keys -X cursor-down
 # mouse bindings
+unbind -n MouseDown3Pane
 bind-key -T root WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind-key -T root WheelDownPane select-pane -t= \; send-keys -M
 # read config files
